# gretacore-v3

./: .gitignore  AGENTS.md  LOCAL_MIGRATION_STEPS.txt  README.md  README_ES.md
docs/: CHANGELOG.md  DOCS_AUDIT.md  PROGRESS.md  REPO_MIGRATION_PLAN.md  REPO_MIGRATION_PLAN_ES.md  WORKSPACE_RULES.md
docs/AMD/: 2026_02_03_B3_10_attractor_validation.md  2026_02_03_B3_11_readout_consistency_fix.md  2026_02_03_B3_12_decode_readout_semantics.md  2026_02_03_B3_13_prefill_decode_delta_lmhead_rms.md  2026_02_03_B3_14_lmhead_force_route_isolation.md  2026_02_03_B3_15_lmhead_weight_layout_verify.md  2026_02_03_B3_16_lmhead_mfma_fix_acceptance.md  2026_02_03_B3_17_decode_lmhead_isolation.md  2026_02_03_B3_18_prefill_decode_hidden_equivalence.md  2026_02_03_B3_19_decode_collapse_fix_acceptance.md  2026_02_03_B3_20_attention_decode_isolation.md  2026_02_03_B3_21_attention_decode_mfma_fix.md  (+31 more)
docs/en/: benchmarks.md  (+13 more)
src/inference/: CMakeLists.txt
src/inference/include/gcore/inference/: block_scheduler.hpp  generator.hpp  layer_trace.hpp  model_config.hpp  stage_trace.hpp  tokenizer.hpp  trace.hpp  weight_loader.hpp
src/inference/src/: block_scheduler.cpp  generator.cpp  layer_trace.cpp  stage_trace.cpp  tokenizer.cpp  weight_loader.cpp
src/inference/test/: block_scheduler_test.cpp  tokenizer_test.cpp  weight_loader_test.cpp
tools/: guard_no_sibling_checkouts.sh
tools/bench/platform/: CMakeLists.txt  README.md
tools/bench/platform/results/: 2026-01-29_baseline_membw_cpu.txt  2026-01-29_baseline_memlat_cpu.txt  2026-01-31_hip_gemm_check_diag_amdcloud.txt  2026-01-31_hip_gemm_check_dump_amdcloud.txt  2026-01-31_hip_gemm_check_fixed_amdcloud.txt  2026-01-31_hip_gemm_perf_amdcloud.txt  2026-01-31_hip_gemm_smoke_amdcloud.txt  2026-01-31_hip_gemm_standard_amdcloud.txt  2026-01-31_hip_noop_launch.txt  2026-01-31_hip_noop_launch_perf_amdcloud.txt  2026-01-31_hip_noop_launch_smoke_amdcloud.txt  2026-01-31_hip_noop_launch_standard_amdcloud.txt  2026-01-31_hip_vec_add_perf_amdcloud.txt  2026-01-31_hip_vec_add_smoke.txt  2026-01-31_hip_vec_add_smoke_amdcloud.txt  2026-01-31_hip_vec_add_standard.txt  2026-01-31_hip_vec_add_standard_amdcloud.txt  2026-01-31_membw_cpu_perf_amdcloud.txt  2026-01-31_membw_cpu_smoke_amdcloud.txt  2026-01-31_membw_cpu_standard_amdcloud.txt  2026-01-31_memlat_cpu_perf_amdcloud.txt  2026-01-31_memlat_cpu_smoke_amdcloud.txt  2026-01-31_memlat_cpu_standard_amdcloud.txt  2026-01-31_platform_summary.csv
tools/bench/platform/scripts/: gen_bench_csv.py  run_presets_local.sh  run_presets_remote.sh
tools/bench/platform/src/: hip_gemm.cpp  hip_noop_launch.cpp  hip_vec_add.cpp  membw_cpu.cpp  memlat_cpu.cpp
tools/bench/runtime/: CMakeLists.txt  README.md
tools/bench/runtime/results/: 2026-01-29_alloc_bench_ops128_max1024.txt  2026-01-29_alloc_bench_ops64_max256.txt  2026-01-29_dispatch_bench_n500000.txt  2026-01-29_stream_bench_n500000.txt  2026-01-29_telemetry_bench_iters2000000.txt  2026-01-29_vk_smoke_bench.txt  2026-01-31_bench_summary.csv  2026-01-31_llm_primitives_bench_smoke.txt  2026-01-31_vk_gemm_bench_compute_only.txt  2026-01-31_vk_gemm_f16acc32_tiled_vec2_32x8_ts_bench_perf.txt  2026-01-31_vk_gemm_f16acc32_tiled_vec2_32x8_ts_bench_smoke.txt  2026-01-31_vk_gemm_f16acc32_tiled_vec2_32x8_ts_bench_standard.txt  2026-01-31_vk_gemm_f16acc32_tiled_vec2_32x8_ts_bench_verify.txt  2026-01-31_vk_gemm_f16acc32_tiled_vec2_db_ts_bench_perf.txt  2026-01-31_vk_gemm_f16acc32_tiled_vec2_db_ts_bench_smoke.txt  2026-01-31_vk_gemm_f16acc32_tiled_vec2_db_ts_bench_standard.txt  2026-01-31_vk_gemm_f16acc32_tiled_vec2_db_ts_bench_verify.txt  2026-01-31_vk_gemm_f16acc32_tiled_vec2_ts_bench_perf.txt  2026-01-31_vk_gemm_f16acc32_tiled_vec2_ts_bench_smoke.txt  2026-01-31_vk_gemm_f16acc32_tiled_vec2_ts_bench_standard.txt  2026-01-31_vk_gemm_f16acc32_tiled_vec2_ts_bench_verify.txt  2026-01-31_vk_gemm_tiled_bench_compute_only.txt  2026-01-31_vk_gemm_tiled_ts_bench_compute_only.txt  2026-01-31_vk_gemm_tiled_ts_bench_perf.txt  2026-01-31_vk_gemm_tiled_ts_bench_smoke.txt  2026-01-31_vk_gemm_tiled_ts_bench_standard.txt  2026-01-31_vk_gemm_tiled_ts_bench_verify.txt  2026-01-31_vk_layernorm_bench_perf.txt  2026-01-31_vk_layernorm_bench_smoke.txt  2026-01-31_vk_layernorm_bench_standard.txt  2026-01-31_vk_layernorm_bench_verify.txt  2026-01-31_vk_layernorm_rmsnorm_fused_bench_perf.txt  2026-01-31_vk_layernorm_rmsnorm_fused_bench_smoke.txt  2026-01-31_vk_layernorm_rmsnorm_fused_bench_standard.txt  2026-01-31_vk_layernorm_rmsnorm_fused_bench_verify.txt  2026-01-31_vk_layernorm_rmsnorm_fused_tiled_bench_perf.txt  2026-01-31_vk_layernorm_rmsnorm_fused_tiled_bench_smoke.txt  2026-01-31_vk_layernorm_rmsnorm_fused_tiled_bench_standard.txt  2026-01-31_vk_layernorm_rmsnorm_fused_tiled_bench_verify.txt  2026-01-31_vk_layernorm_tiled_bench_perf.txt  (+19 more)
tools/bench/runtime/scripts/: gen_bench_csv.py  run_presets_local.sh  run_presets_remote.sh
tools/bench/runtime/src/: alloc_bench.cpp  cpu_ref_test.cpp  dispatch_bench.cpp  gemm_ref_bench.cpp  graph_integration_test.cpp  hip_attention_bench.cpp  hip_fill_bench.cpp  hip_gemm_bench.cpp  hip_gemm_bench.cpp.bak  hip_graph_runner_test.cpp  hip_kv_cache_bench.cpp  hip_llama_block_test.cpp  hip_rmsnorm_bench.cpp  hip_smoke_bench.cpp  kv_cache_bench.cpp  llm_primitives_bench.cpp  stream_bench.cpp  telemetry_bench.cpp  vk_fill_bench.cpp  vk_gemm_auto_ts_bench.cpp  vk_gemm_bench.cpp  vk_gemm_f16acc32_subgroup_ts_bench.cpp  vk_gemm_f16acc32_tiled_ts_bench.cpp  vk_gemm_f16acc32_tiled_vec2_32x8_ts_bench.cpp  vk_gemm_f16acc32_tiled_vec2_db_ts_bench.cpp  vk_gemm_f16acc32_tiled_vec2_ts_bench.cpp  vk_gemm_runtime_smoke.cpp  vk_gemm_tiled_bench.cpp  vk_gemm_tiled_ts_bench.cpp  vk_layernorm_bench.cpp  vk_layernorm_rmsnorm_fused_bench.cpp  vk_layernorm_rmsnorm_fused_tiled_bench.cpp  vk_layernorm_tiled_bench.cpp  vk_rmsnorm_bench.cpp  vk_rmsnorm_tiled_bench.cpp  vk_smoke_bench.cpp  vk_softmax_bench.cpp  vk_softmax_tiled_bench.cpp
tools/inference/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  greta_infer  test_l0  test_l0.cpp
tools/inference/src/: greta_infer.cpp
(+213 files in other folders)
